--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -62,6 +62,11 @@
     <string name="lblFlightDetailHigh">Élevé</string>
     <string name="lblRouteColor">Couleur de l\'itinéraire</string>
     <string name="lblPathColor">Couleur du chemin</string>
+    <string name="lblMapStyle">Style de carte</string>
+    <string name="lblMapStyleStandard">Carte standard</string>
+    <string name="lblMapStyleHybrid">Carte hybride</string>
+    <string name="lblMapStyleTerrain">Carte du terrain</string>
+    <string name="lblMapStyleSatellite">Carte satellite</string>
     <string name="lblNightMode">Mode Nuit</string>
     <string name="lblNightModeOff">Désactivé</string>
     <string name="lblNightModeOn">Activé</string>
