- AdditionalOptions now opens a full browser window *outside* the app  - Fix fNaked Parameter  - Explain why I can't link to support.

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -168,7 +168,7 @@
     <string name="lblOptionsTime">Format de l\'heure</string>
     <string name="lblOptionsContact">Gardez le contact</string>
     <string name="lblFAQ">FAQ</string>
-    <string name="lblSupportDescript">MyFlightbook est et restera gratuit. Mais si vous la trouvez utile, nous sommes heureux d\'accepter des dons.</string>
+    <string name="lblSupportDescript">MyFlightbook est et restera gratuit. Mais si vous la trouvez utile, nous sommes heureux d\'accepter des dons. En raison des politiques de Google Play, je ne peux pas fournir de lien direct ici.</string>
     <string name="btnSupport">Soutenir MyFlightbook</string>
     <string name="lblDonateOnMFB">En raison des politiques de Google Play, je ne peux pas fournir de lien direct ici. Veuillez ouvrir un navigateur, accéder à MyFlightbook.com et choisir « Faire un don » dans l\'onglet « Profil ».</string>
     <string name="lblAdditionalOptions">Options supplémentaires</string>
