--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -168,7 +168,7 @@
     <string name="lblOptionsTime">Times</string>
     <string name="lblOptionsContact">Stay in touch</string>
     <string name="lblFAQ">FAQ</string>
-    <string name="lblSupportDescript">MyFlightbook is and will remain free.  But if you find it valuable, we are happy to accept your support.</string>
+    <string name="lblSupportDescript">MyFlightbook is and will remain free.  But if you find it valuable, we are happy to accept your support.  Due to Google Play policies, I can\'t provide a direct link here.</string>
     <string name="btnSupport">Support MyFlightbook</string>
     <string name="lblDonateOnMFB">Due to Google Play policies, I can\'t provide a direct link here.  Please open a browser and go to MyFlightbook.com and choose "Donate" from the "Profile" tab.</string>
     <string name="lblAdditionalOptions">Additional Options</string>
