Issue #314 - format currency as monetary amounts.
Also improved display of ranges like tach, hobbs, block, etc., adding hobbs (which wasn't there at all)

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -107,6 +107,8 @@
     <string name="lblFlightEnd">Flug Ende</string>
     <string name="lblTachStart">Start Tacho</string>
     <string name="lblTachEnd">Ende Tacho</string>
+    <string name="lblElapsedTach">Tacho</string>
+    <string name="lblElapsedHobbs">Hobbs</string>
     <string name="lblBlockOut">Block Out</string>
     <string name="lblBlockIn">Block In</string>
     <string name="lblProperties">Bearbeite Flug Daten…</string>
