--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -217,6 +217,7 @@
     <string name="lblNewEngine">Nouveau moteur :</string>
     <string name="lblMaintNotes">Remarques :</string>
     <string name="lblMaintNotesHint">Par exemple : emplacement/type/erreur de vérification VOR</string>
+    <string name="lblCustomDeadlines">Délais personnalisés</string>
     <string name="lblAircraftPrefsHeader">Temps de vol à remplir par défaut pour cet aéronef</string>
     <string name="lblShowAircraft">Montrer cet aéronef pour de nouveaux vols</string>
     <string name="lblRoleNone">Ne pas remplir automatiquement</string>
